{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 23,
  "lineage": "785553e0-7582-75e1-1069-f672fc250cc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fd78f63b097046e",
            "arn": "arn:aws:ec2:eu-north-1:339712844630:elastic-ip/eipalloc-08fd78f63b097046e",
            "association_id": "eipassoc-0e74f5db8ad8308f0",
            "domain": "vpc",
            "id": "eipalloc-08fd78f63b097046e",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-01bd9d4b89c829c05",
            "private_dns": "ip-10-0-1-183.eu-north-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-13-49-36-242.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.36.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic_ip"
            },
            "tags_all": {
              "Name": "Elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:internet-gateway/igw-079b07422f7652d17",
            "id": "igw-079b07422f7652d17",
            "owner_id": "339712844630",
            "tags": {
              "Name": "Internet_test"
            },
            "tags_all": {
              "Name": "Internet_test"
            },
            "vpc_id": "vpc-026ed91b051ac9ea8"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fd78f63b097046e",
            "association_id": "eipassoc-0e74f5db8ad8308f0",
            "connectivity_type": "public",
            "id": "nat-04f93d468d0753e7e",
            "network_interface_id": "eni-01bd9d4b89c829c05",
            "private_ip": "10.0.1.183",
            "public_ip": "13.49.36.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2ae7499cdb3c229",
            "tags": {
              "Name": "Natgatway_test"
            },
            "tags_all": {
              "Name": "Natgatway_test"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cd371c42c25c8291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f93d468d0753e7e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cd371c42c25c829",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_gt",
            "aws_route_table.private_Route",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:route-table/rtb-06cd371c42c25c829",
            "id": "rtb-06cd371c42c25c829",
            "owner_id": "339712844630",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_Test"
            },
            "tags_all": {
              "Name": "private_route_Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-026ed91b051ac9ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:route-table/rtb-09524f92f7d36a629",
            "id": "rtb-09524f92f7d36a629",
            "owner_id": "339712844630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079b07422f7652d17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_test"
            },
            "tags_all": {
              "Name": "Public_route_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-026ed91b051ac9ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_internet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ff36b74adcfb476",
            "route_table_id": "rtb-06cd371c42c25c829",
            "subnet_id": "subnet-02ebc8b816f48d025"
          },
          "dependencies": [
            "aws_route_table.private_Route",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bbb2927662d5237",
            "route_table_id": "rtb-09524f92f7d36a629",
            "subnet_id": "subnet-0c2ae7499cdb3c229"
          },
          "dependencies": [
            "aws_internet_gateway.ig_internet",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:subnet/subnet-02ebc8b816f48d025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ebc8b816f48d025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712844630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet_Test"
            },
            "tags_all": {
              "Name": "Private_subnet_Test"
            },
            "vpc_id": "vpc-026ed91b051ac9ea8"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:subnet/subnet-0c2ae7499cdb3c229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2ae7499cdb3c229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712844630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_Test"
            },
            "tags_all": {
              "Name": "Public_Subnet_Test"
            },
            "vpc_id": "vpc-026ed91b051ac9ea8"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:339712844630:vpc/vpc-026ed91b051ac9ea8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022e24cdefa1c2b3e",
            "default_route_table_id": "rtb-069fc56229c0c48db",
            "default_security_group_id": "sg-066683e30bb9b8440",
            "dhcp_options_id": "dopt-002b56ad8328e8504",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026ed91b051ac9ea8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069fc56229c0c48db",
            "owner_id": "339712844630",
            "tags": {
              "Name": "vpc_test"
            },
            "tags_all": {
              "Name": "vpc_test"
            }
          }
        }
      ]
    }
  ]
}